--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="media flex-column flex-md-row align-items-center">
 
                         
-                        <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="https://ampmyun.github.ioassets/images/portrait.png" alt="image">
+                        <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="https://ampmyun.github.ioassets/images/avatar.png" alt="image">
                         
 
                         <div class="media-body text-left">
